[package]
name = "rp2040-37c3-oled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
nb = "1.1.0"
panic-halt = "0.2.0"
smart-leds = "0.3.0"
waveshare-rp2040-zero = "0.7.0"
ws2812-pio = "0.7.0"
