[package]
name = "rp2040-37c3-oled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Profiles taken from https://github.com/rp-rs/rp2040-project-template

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[dependencies]
cortex-m-rt = "0.7.3"
defmt-rtt = "0.4.0"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
fugit = "0.3.7"
nb = "1.1.0"
panic-halt = "0.2.0"
smart-leds = "0.3.0"
ssd1306 = "0.8.4"
usb-device = "0.2"
usbd-serial = "0.1"
waveshare-rp2040-zero = "0.7.0"
ws2812-pio = "0.7.0"
